# diabetes-prediction-ml-pipeline

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  File Structure   Makefile  README.md  Structure  TECH STACK  css  docker-compose.yml  docs  evaluate.py  metrics.md  preprocess.py  pyproject.toml  rag_pipeline.py  requirements.txt  setup.py  src  train.py
config/: config_sample.yaml
config/config/: config.yaml
data/: README.md  data_loader.py
notebooks/: diabetes_prediction_workflow.ipynb
src/: __init__.py  data_preprocessing.py  evaluate.py  inference.py  preprocess.py  preprocessing.py  train.py
test/: test_evaluate.py  test_preprocess.py  test_train.py
tests/: test_preprocessing.py
