[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes-prediction-ml-pipeline"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "joblib",
    "pyyaml",
    "openai",
    "chromadb",
]

[project.scripts]
diabetes-train = "src.train:main"
diabetes-evaluate = "src.evaluate:main"

[tool.pytest.ini_options]
testpaths = ["tests", "test"]
